test_scripts/errors/string_too_long.shm
let s = "x";
let i = 0;
while i < 25 {
    s = s + s;
    i += 1;
}
print(s.len());
